--- a/src/components/home/src/css/aboutUs.module.css
+++ b/src/components/home/src/css/aboutUs.module.css
@@ -33,7 +33,7 @@ font-style: normal;
 font-weight: normal;
 font-size: 16px;
 line-height: 170%;
-margin-left: 4vw;
+margin-left: 56px;
 /* or 27px */
 
 text-align: justify;
@@ -56,7 +56,7 @@ line-height: 170%;
 /* identical to box height, or 24px */
 
 text-align: justify;
-margin-left: 4vw;
+margin-left: 56px;
 cursor: pointer;
 /* Blue1 */
 text-transform: uppercase;
