--- a/src/components/home/src/css/events.module.css
+++ b/src/components/home/src/css/events.module.css
@@ -5,7 +5,7 @@
 }
 .eventChild{
     display: flex;
-    margin:10px;
+    margin:23px 46px 23px 0px;
     background: rgba(251, 190, 74, 0.05);
     mix-blend-mode: normal;
     border: 1px solid rgba(251, 190, 74, 0.3);
@@ -13,13 +13,11 @@
     border-radius: 2px;
 }
 .eventChild1{
-    width: 16vw;
+    width: 260px;
     padding-top: 13px;
     padding-left: 24px;
 }
-.eventChild2>img{
-    width:18vw;
-}
+
 .eventTitle{
     font-family: Poppins;
 font-style: normal;
@@ -38,6 +36,7 @@ color: #3788AA;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 250px;
 }
 .date{
     font-family: Poppins;
@@ -65,7 +64,22 @@ line-height: 21px;
 text-transform: capitalize;
 
 /* Blue1 */
-padding-right:10px;
 color: #1C445A;
 cursor: pointer;
 }
+.subEvents{
+    margin-right: 20px;
+font-family: Noto Sans;
+font-style: normal;
+font-weight: normal;
+font-size: 16px;
+line-height: 22px;
+/* identical to box height */
+
+text-transform: capitalize;
+
+color: rgba(28, 68, 90, 0.6);
+}
+/* .eventChild2{
+    height:204.94px !important;
+} */
