--- a/src/components/home/src/css/index.module.css
+++ b/src/components/home/src/css/index.module.css
@@ -1,9 +1,13 @@
-p{
+.indexParent{
+    background-color: #fff;
+}
+.heading{
     font-family: Poppins;
 font-style: normal;
 font-weight: 500;
 font-size: 36px;
 line-height: 54px;
+margin-bottom:15px !important;
 /* identical to box height */
 
 text-transform: capitalize;
@@ -11,4 +15,20 @@ text-transform: capitalize;
 /* Blue2 */
 
 color: #1B638B;
+}
+.about{
+    margin: 80px 0;
+    background-image: url('../img/aboutback.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.events{
+    margin:60px 0 ;
+    
+
+}
+
+.main,.events,.contact,.about,.nav{
+    padding-left:100px;
+
 }
