--- a/src/components/home/src/css/navbar.module.css
+++ b/src/components/home/src/css/navbar.module.css
@@ -2,7 +2,10 @@
     /* background-color: #E5E5E5; */
     display: flex;
     justify-content: space-around;
+    align-items: center;
+    margin:15px  0 30px 0; 
 }
+
 .navParent{
     width:100vw;
     display: flex;
@@ -17,7 +20,7 @@
     flex:1;
 }
 .logo>img{
-    /* margin-left: 8vw; */
+    margin-left:100px;
     margin-top:10px;
 }
 .navChild{
@@ -35,7 +38,7 @@
     color: #1C445A;
 }
 .active::after{
-    width:100% !important;
+    width:60% !important;
 }
 .navChild::after{
     content: '';
@@ -47,5 +50,5 @@
     transition: width .5s;
 }
 .navChild:hover::after{
-    width:100%;
+    width:60%;
 }
