--- a/src/components/aboutUs/src/aboutus.module.css
+++ b/src/components/aboutUs/src/aboutus.module.css
@@ -6,7 +6,7 @@ background: #1C445A;
 border-radius: 2px;
 display: flex;
 align-items: center;
-    justify-content: start;
+    justify-content: flex-start;
 }
 .heading{
     font-family: Poppins;
