--- a/src/components/events/src/events.module.css
+++ b/src/components/events/src/events.module.css
@@ -5,7 +5,7 @@
     border-radius: 2px;
     display: flex;
     align-items: center;
-    justify-content: start;
+    justify-content: flex-start;
     margin-bottom: 80px ;
 }
 .heading{
