--- a/src/components/home/src/css/aboutUs.module.css
+++ b/src/components/home/src/css/aboutUs.module.css
@@ -9,8 +9,7 @@ flex:1;
 }
 .title{
     display: flex;
-    align-items: center;
-    
+    align-items: center;   
 }
 .title>p{
     font-family: Poppins;
@@ -54,11 +53,30 @@ font-weight: 500;
 font-size: 14px;
 line-height: 170%;
 /* identical to box height, or 24px */
-
+text-decoration: none;
 text-align: justify;
 margin-left: 56px;
 cursor: pointer;
 /* Blue1 */
 text-transform: uppercase;
 color: #1C445A;
+}
+@media only screen and (max-width:768px){
+    .title>p{
+        font-size: 16px;
+        line-height: 20px;
+    }
+    .description{
+        font-size: 13px;
+        line-height: 16px;
+    }
+    .title,.description{
+        margin-right: 14px;
+    }
+    .aboutChild2{
+        display: none;
+    }
+    .more{
+        font-size: 11px;
+    }
 }
