--- a/src/components/home/src/css/events.module.css
+++ b/src/components/home/src/css/events.module.css
@@ -60,7 +60,7 @@ font-weight: 500;
 font-size: 14px;
 line-height: 21px;
 /* identical to box height */
-
+text-decoration: none;
 text-transform: capitalize;
 
 /* Blue1 */
@@ -83,3 +83,37 @@ color: rgba(28, 68, 90, 0.6);
 /* .eventChild2{
     height:204.94px !important;
 } */
+@media only screen and (max-width:768px){
+    .eventParent{
+        flex-direction: column;
+    }
+    .eventChild{
+        margin: 23px 14px 23px 0px;
+    }
+    .eventChild1{
+        width: 200px;
+        padding-left: 14px;
+    }
+    .eventTitle{
+        font-size: 12px;
+        line-height: 15px;
+    }
+    .subEvents{
+        font-size: 10px;
+    }
+    .eventDate{
+        width: 190px;
+    }
+    .date{
+        font-size: 13px;
+        line-height: 16px;
+    }
+    .learn{
+        font-size: 12px;
+        line-height: 15px;
+    }
+    .eventChild2{
+        height: 138.5px;
+
+    }
+}
