--- a/src/components/home/src/css/events.module.css
+++ b/src/components/home/src/css/events.module.css
@@ -89,9 +89,10 @@ color: rgba(28, 68, 90, 0.6);
     }
     .eventChild{
         margin: 23px 14px 23px 0px;
+        width: fit-content;
     }
     .eventChild1{
-        width: 200px;
+        width: 46vw;
         padding-left: 14px;
     }
     .eventTitle{
@@ -100,20 +101,22 @@ color: rgba(28, 68, 90, 0.6);
     }
     .subEvents{
         font-size: 10px;
+        line-height: 13px;
     }
     .eventDate{
-        width: 190px;
+        width: 90%;
     }
     .date{
-        font-size: 13px;
+        font-size: 9px;
         line-height: 16px;
     }
     .learn{
-        font-size: 12px;
+        font-size: 9px;
         line-height: 15px;
     }
     .eventChild2{
-        height: 138.5px;
+        width:40vw;
+
 
     }
 }
