--- a/src/components/home/src/css/navbar.module.css
+++ b/src/components/home/src/css/navbar.module.css
@@ -24,6 +24,7 @@
     margin-top:10px;
 }
 .navChild{
+    width:fit-content;
     font-family: Noto Sans;
     font-style: normal;
     font-weight: normal;
@@ -41,7 +42,7 @@
     width:60% !important;
 }
 .navChild::after{
-    content: '';
+    content:'';
     display: block;
     width: 0;
     margin-top:2px;
@@ -50,7 +51,7 @@
     transition: width .5s;
 }
 .navChild:hover::after{
-    width:60%;
+    width:60% !important;
 }
 .amburger{
     display: none;
@@ -67,6 +68,9 @@
     .navParent{
         display: none;
     }
+    .navChild{
+        margin: 12px;
+    }
     .navMobileParent{
         display: flex;
     flex-direction: column;
@@ -74,9 +78,8 @@
     align-items: center;
     background-color: #fff;
     margin-left: 0;
-    padding-top: 7vh;
     width: 100%;
-    min-height: 50vh;
+    height: 100vh;
     position: fixed;
     top: 0;
     z-index: 1000;
