--- a/src/components/aboutUs/src/aboutus.module.css
+++ b/src/components/aboutUs/src/aboutus.module.css
@@ -68,7 +68,7 @@ opacity: 0.8;
     opacity: 0.1;
     height: 400px;
     position: relative;
-    right: 6vw;
+    right: -1vw;
 }
 .aboutGrandchild{
     display: flex;
@@ -92,9 +92,10 @@ opacity: 0.8;
     .aboutHr{
         width: 60px;
     }
+    
     .title>p{
         font-size: 18px;
-        line-height: 24px;
+        line-height: 20px;
     }
     .description{
         font-size: 12px;
@@ -112,5 +113,14 @@ opacity: 0.8;
     }
     .aboutParent{
         width: 100%;
+    }
+}
+@media only screen and (min-width:1600px){
+    .title{
+        font-size: 30px;
+        line-height: 42px;
+    }
+    .description{
+        font-size: 20px;
     }
 }
