--- a/src/components/home/src/css/contact.module.css
+++ b/src/components/home/src/css/contact.module.css
@@ -86,7 +86,7 @@ height: 2px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 1200px;
+    width: 95%;
     margin-top: 90px;
 }
 .logo{
@@ -122,6 +122,7 @@ color: #3788AA;
     display: flex;
     /* flex-direction: column; */
     justify-content: space-between;
+    align-items: center;
     font-family: Noto Sans;
     font-style: normal;
     font-weight: normal;
@@ -132,8 +133,6 @@ color: #3788AA;
     list-style: none;
     color: #1C445A;
     opacity: 0.8;
-    width: 400px;
-    height: 109px;
 }
 .contactImage{
     height: 16px;
@@ -154,7 +153,7 @@ border-radius: 2px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width:230px;
+    width: 20%;
 }
 .contactGrandChild{
     display: flex;
@@ -269,4 +268,45 @@ color: rgba(0, 0, 0, 0.3);
         margin-left:12px;
     }
 
+}
+@media only screen and  (min-width:1600px){
+    .hr{
+        width: 95%;
+    }
+    .heading{
+        font-size: 42px;
+    }
+    .logo{
+        width: 300px;
+        height: 90px;
+    }
+    .date{
+        font-size: 24px;
+        line-height: 42px;
+    }
+    .icon{
+        width: 70px;
+    }
+    .icon img{
+        width: 30px;
+        height: 30px;
+    }
+    .description{
+        font-size: 22px;
+        line-height: 26px;
+    }
+    .contactImage{
+        height: 22px;
+        width: 22px;
+    }
+    .description>div{
+        margin-left: 10px;
+    }
+    .text{
+        font-size: 22px;
+        line-height: 28px;
+    }
+    .contactGrandChild{
+        margin-right: 10px;
+    }
 }
