--- a/src/components/home/src/css/index.module.css
+++ b/src/components/home/src/css/index.module.css
@@ -47,3 +47,8 @@ color: #1B638B;
 line-height: 30px;
     }
 }
+@media only screen and  (min-width:1600px){
+    .heading{
+        font-size: 42px;
+    }
+}
