--- a/src/components/home/src/css/main.module.css
+++ b/src/components/home/src/css/main.module.css
@@ -154,9 +154,41 @@ line-height: 18px;
 line-height: 21px;
     }
    .collage,.heading,.note,.description,.date,.more{
-       margin:4px 0;
+    margin: 11px 0;
    }
    .note,.description{
     max-width:290px;
    }
+}
+@media only screen and (min-width:1600px){
+    .mainContainer2>img{
+        width: 700px;
+        height: 500px;
+    }
+    .collage{
+        font-size: 42px;
+    }
+    .heading{
+        font-size: 60px;
+    }
+    .date{
+        font-size: 30px;
+        width:562px;
+    }
+    .note{
+        font-size: 22px;
+    }
+    .description{
+        font-size: 22px;
+        margin-right: 15px;
+    }
+    .more{
+        width: 170px;
+        height: 56px;
+        font-size: 20px;
+    }
+    .more>img{
+        height: 16px;
+        width: 16px;
+    }
 }
