--- a/src/components/events/src/events.module.css
+++ b/src/components/events/src/events.module.css
@@ -40,7 +40,10 @@
     right: -1vw;
 }
 .subEvent{
-    margin:30px 78px 30px 42px;
+    margin: 0px 78px 0px 42px;
+display: flex;
+flex-direction: column;
+justify-content: space-evenly;
 }
 .eventTitle{
     font-family: Poppins;
@@ -68,6 +71,9 @@ line-height: 160%;
 color: #1B638B;
 }
 .readProblem{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background: #FBBE4A;
 border-radius: 2px;
 text-align: center;
@@ -77,13 +83,11 @@ font-weight: 500;
 font-size: 14px;
 line-height: 21px;
 text-decoration: none;
-padding: 5px 10px;
 text-transform: uppercase;
 cursor: pointer;
 border-style: none;
 width: 234px;
 height: 36px;
-/* Blue1 */
 color: #1C445A;
 }
 @media only screen and (max-width:768px){
@@ -95,8 +99,8 @@ color: #1C445A;
         height: 200px;
     }
     .heading{
-        font-size: 26px;
-        margin-left: 15px;
+        font-size: 23px;
+        margin-left: 14px;
     }
     .eventsHr{
         width: 60px;
@@ -135,6 +139,8 @@ color: #1C445A;
         font-size: 20px;
     }
     .readProblem{
+        width: 300px;
+        height: 50px;
         font-size: 20px;
         line-height: 24px;
     }
