--- a/src/components/problems/src/problems.module.css
+++ b/src/components/problems/src/problems.module.css
@@ -45,6 +45,7 @@ border: 1px solid rgba(251, 190, 74, 0.3);
 box-sizing: border-box;
 border-radius: 2px;
 width: 48%;
+align-items: center;
 margin-right:24px;
 margin-bottom:30px;
 }
