--- a/src/components/problems/src/problems.module.css
+++ b/src/components/problems/src/problems.module.css
@@ -1,167 +1,147 @@
-
-.problemHead{
-    width:100%;
-    height:400px;
-    background: #1C445A;
+.eventsHead{
+    width: 100%;
+    height: 400px;
+    background-color: #1C445A;
     border-radius: 2px;
     display: flex;
     align-items: center;
-        justify-content: flex-start;
-    }
- .heading{
-        font-family: Poppins;
-        font-style: normal;
-        font-weight: 600;
-        font-size: 48px;
-        margin-left:104px;
-        line-height: 150%;
-        /* identical to box height, or 72px */
-        text-transform: uppercase;
-        
-        /* Yellow1 */
-        color: #FBBE4A;   
-    }
-    .problemHr{
-        background: #FBBE4A;
-        width: 126px;
-        height: 2px;
-        margin: 0;
-        border-style: none;
-        margin-left:10px;
-    }
-.problemParent{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin:100px 0;
-    margin-left:104px !important;
+    justify-content: flex-start;
+    margin-bottom: 80px ;
 }
-.problemChild{
+.heading{
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 48px;
+    line-height: 150%;
+    /* identical to box height, or 72px */
+    text-transform: uppercase;
+    
+    /* Yellow1 */
+    color: #FBBE4A; 
+    margin-left: 120px;  
+}
+.eventsHr{
+    background: #FBBE4A;
+    width: 126px;
+    height: 2px;
+    margin: 0;
+    border-style: none;
+    margin-left:10px;
+}
+.eventsChild{
     display: flex;
     justify-content: space-between;
-    background: rgba(251, 190, 74, 0.05);
-mix-blend-mode: multiply;
-border: 1px solid rgba(251, 190, 74, 0.3);
-box-sizing: border-box;
-border-radius: 2px;
-width: 48%;
-align-items: center;
-margin-right:24px;
-margin-bottom:30px;
+    margin:36px 120px;
+    background: rgba(196, 196, 196, 0.15)
 }
-.problemChild1{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    padding:0 24px;
+.eventsHead>img{
+    position: relative;
+    right: -1vw;
 }
-
-    .problemTitle{
+.subEvent{
+    margin: 0px 78px 0px 42px;
+display: flex;
+flex-direction: column;
+justify-content: space-evenly;
+}
+.eventTitle{
     font-family: Poppins;
 font-style: normal;
 font-weight: 500;
-font-size: 24px;
-line-height: 30px;
-
+font-size: 28px;
+line-height: 42px;
+margin: 0;
 /* identical to box height */
 text-transform: capitalize;
 
-/* Blue3 */
-color: #3788AA;
+/* Blue2 */
+color: #1B638B;
 }
-.problemDescription{
-
-font-family: Noto Sans;
+.eventDescription{
+    font-family: Noto Sans;
 font-style: normal;
 font-weight: normal;
-font-size: 14px;
-line-height: 150%;
+font-size: 16px;
+line-height: 160%;
 
-/* or 21px */
+/* or 26px */
 
-color: rgba(28, 68, 90, 0.6);
+/* Blue2 */
+color: #1B638B;
 }
-/* .date{
-    font-family: Poppins;
-font-style: normal;
-font-weight: 500;
-font-size: 18px;
-line-height: 24px;
-
-text-transform: capitalize;
-
-color: #1C445A;
-opacity: 0.5;
-} */
-.downloadProblem{
-    font-family: Poppins;
+.readProblem{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #FBBE4A;
+border-radius: 2px;
+text-align: center;
+font-family: Poppins;
 font-style: normal;
 font-weight: 500;
 font-size: 14px;
 line-height: 21px;
-width: fit-content;
-/* identical to box height */
-text-transform: capitalize;
 text-decoration: none;
-/* Blue1 */
+text-transform: uppercase;
+cursor: pointer;
+border-style: none;
+width: 234px;
+height: 36px;
 color: #1C445A;
 }
-.problemImage{
-    width:50%;
-    height: 200px;
-}
 @media only screen and (max-width:768px){
-    .problemParent{
-        margin:50px 14px !important;
-    }
-    .problemChild{
-        width: 100%;
-        margin-right: 0;
-        margin-bottom:25px;
-        flex-direction: column-reverse;
-    }
-    .problemChild1{
-        padding: 10px 10px;
-    }
-    .problemTitle{
-        font-size: 18px;
-    }
-    .problemDescription{
-        font-size: 10px;
-    }
-    .downloadProblem{
-        font-size: 10px;
-    }
-    .problemImage{
-        width: 100%;
-        height: 250px;
-    }
-    .problemHead{
+    .eventsHead{
         height:200px;
         margin-bottom: 40px;
+    }
+    .eventsHead>img{
+        height: 200px;
     }
     .heading{
         font-size: 23px;
         margin-left: 14px;
     }
-    .problemHr{
+    .eventsHr{
         width: 60px;
     }
-
-}
-@media only screen and (min-width:1600px){
-    .problemTitle{
-        font-size: 30px;
-        line-height: 42px;
+    .eventsChild{
+        margin:30px 15px;
+        flex-direction:  column-reverse;
     }
-    .problemDescription{
-        font-size: 20px;
+    .subEvent{
+        margin:10px 30px 10px 20px;
     }
-    .downloadProblem{
-        font-size: 20px;
+    .eventTitle{
+        font-size: 18px;
         line-height: 24px;
     }
-    .problemImage{
-        height: 250px;
+    .eventDescription{
+        font-size: 12px;
+    }
+    .readProblem{
+        width: 120px;
+        font-size:8px;
+        height: 26px;
+    }
+    .eventsImage{
+        position: relative;
+        width: 100%;
+        opacity: 0.85;
+    }   
+}
+@media only screen and (min-width:1600px){
+    .eventTitle{
+        font-size: 34px;
+        line-height: 42px;
+    }
+    .eventDescription{
+        font-size: 20px;
+    }
+    .readProblem{
+        width: 300px;
+        height: 50px;
+        font-size: 20px;
+        line-height: 24px;
     }
 }
