--- a/src/components/problems/src/problems.module.css
+++ b/src/components/problems/src/problems.module.css
@@ -127,7 +127,7 @@ color: #1C445A;
     }
     .eventsImage{
         position: relative;
-        width: 100%;
+        width: 100% !important;
         opacity: 0.85;
     }   
 }
@@ -148,4 +148,7 @@ color: #1C445A;
     .eventsImage{
         width:400px
     }
+}
+.eventsImage{
+    width:400px
 }
