--- a/src/components/home/src/css/main.module.css
+++ b/src/components/home/src/css/main.module.css
@@ -1,194 +1,198 @@
-@font-face{
-    font-family: gilroy;
-    src: url('../img/gilroy.otf');
+@font-face {
+  font-family: gilroy;
+  src: url("../img/gilroy.otf");
 }
-.mainContainer{
-    display: flex;
-    justify-content: space-between;
-    margin:52px 0px;
-    /* align-content: center;   */
-    /* background: #E5E5E5;   */
+.mainContainer {
+  display: flex;
+  justify-content: space-between;
+  margin: 52px 0px;
+  /* align-content: center;   */
+  /* background: #E5E5E5;   */
 }
 
-.mainContainer1{
-    display:flex;
+.mainContainer1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  /* margin-left: 8vw; */
+  flex: 1;
+}
+.collage {
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 36px;
+  line-height: 54px;
+  /* identical to box height */
+  /* Blue2 */
+
+  color: #1b638b;
+}
+.heading {
+  font-family: gilroy;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 54px;
+  line-height: 66px;
+
+  /* Blue1 */
+
+  color: #1c445a;
+}
+.date {
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 36px;
+  /* identical to box height */
+
+  /* Blue3 */
+
+  color: #3788aa;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 600px;
+}
+.hr {
+  background-color: #fbbe4a;
+  border-style: none;
+  /* margin: 0; */
+  margin-right: 0;
+  width: 180px;
+  height: 2px;
+}
+.description {
+  font-family: Noto Sans;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 25px;
+
+  /* Gray 2 */
+
+  color: #4f4f4f;
+}
+.more {
+  background: #fbbe4a;
+  border-radius: 2px;
+  border: none;
+  width: 154px;
+  height: 50px;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 21px;
+  /* identical to box height */
+  cursor: pointer;
+  text-transform: uppercase;
+
+  /* Blue1 */
+
+  color: #1c445a;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.mainContainer2 > img {
+  width: 600px;
+  height: 400px;
+}
+.note {
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 24px;
+  /* identical to box height */
+
+  /* Yellow1 */
+
+  color: rgba(28, 68, 90, 0.6);
+}
+
+@media only screen and (max-width: 768px) {
+  .mainContainer {
     flex-direction: column;
-    justify-content: space-evenly;    
-    /* margin-left: 8vw; */
-    flex:1;
-}
-.collage{
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 36px;
-    line-height: 54px;
-    /* identical to box height */
-    /* Blue2 */
-    
-    color: #1B638B;
-    
-}
-.heading{
-    font-family: gilroy;
-font-style: normal;
-font-weight: 800;
-font-size: 54px;
-line-height: 66px;
-
-/* Blue1 */
-
-color: #1C445A;
-}
-.date{
-    font-family: Poppins;
-font-style: normal;
-font-weight: 500;
-font-size: 24px;
-line-height: 36px;
-/* identical to box height */
-
-
-/* Blue3 */
-
-color: #3788AA;
-display: flex;
-justify-content: space-between;
-align-items: center;
-width:490px;
-}
-.hr{
-    background-color: #FBBE4A;
-    border-style: none;
-    /* margin: 0; */
-    width: 245px;
-    height: 2px;
-}
-.description{
-    font-family: Noto Sans;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 18px;
-    line-height: 25px;
-    
-    /* Gray 2 */
-    
-    color: #4F4F4F;
-}
-.more{
-    background: #FBBE4A;
-    border-radius: 2px ;
-    border:none;
-    width: 154px;
-    height: 50px;font-family: Poppins;
-    font-style: normal;
-    font-weight: 500;
+    justify-content: space-around;
+  }
+  .mainContainer2 {
+    display: none;
+  }
+  .collage {
+    font-size: 16px;
+    line-height: 24px;
+  }
+  .heading {
+    font-size: 28px;
+    line-height: 34px;
+  }
+  .date {
+    font-size: 16px;
+    line-height: 24px;
+    max-width: 250px;
+  }
+  .hr {
+    max-width: 88px;
+  }
+  .description {
+    font-size: 14px;
+    line-height: 19px;
+  }
+  .more {
+    width: 124px;
+    height: 40px;
+    font-size: 12px;
+    line-height: 18px;
+  }
+  .note {
     font-size: 14px;
     line-height: 21px;
-    /* identical to box height */
-    cursor: pointer;
-    text-transform: uppercase;
-
-    /* Blue1 */
-
-    color: #1C445A;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.mainContainer2>img{
-    width:600px;
-    height:400px;
-}
-.note{
-    font-family: Poppins;
-font-style: normal;
-font-weight: normal;
-font-size: 16px;
-line-height: 24px;
-/* identical to box height */
-
-
-/* Yellow1 */
-
-color:rgba(28, 68, 90, 0.6);;
-}
-
-@media only screen and (max-width:768px){
-    .mainContainer{
-        flex-direction: column;
-        justify-content: space-around;
-    }
-    .mainContainer2{
-        display: none;
-    }
-    .collage{
-        font-size: 16px;
-    line-height: 24px;
-    }
-    .heading{
-        font-size: 28px;
-line-height: 34px;
-
-    }
-    .date{
-        font-size: 16px;
-line-height: 24px;
-max-width:250px;
-    }
-    .hr{
-        max-width: 88px;
-    }
-    .description{
-        font-size: 14px;
-line-height: 19px;
-    }
-    .more{
-        width: 124px;
-height: 40px;
-font-size: 12px;
-line-height: 18px;
-    }
-    .note{
-        font-size: 14px;
-line-height: 21px;
-    }
-   .collage,.heading,.note,.description,.date,.more{
+  }
+  .collage,
+  .heading,
+  .note,
+  .description,
+  .date,
+  .more {
     margin: 11px 0;
-   }
-   .note,.description{
-    max-width:290px;
-   }
+  }
+  .note,
+  .description {
+    max-width: 290px;
+  }
 }
-@media only screen and (min-width:1600px){
-    .mainContainer2>img{
-        width: 700px;
-        height: 500px;
-    }
-    .collage{
-        font-size: 42px;
-    }
-    .heading{
-        font-size: 60px;
-    }
-    .date{
-        font-size: 30px;
-        width:562px;
-    }
-    .note{
-        font-size: 22px;
-    }
-    .description{
-        font-size: 22px;
-        margin-right: 15px;
-    }
-    .more{
-        width: 170px;
-        height: 56px;
-        font-size: 20px;
-    }
-    .more>img{
-        height: 16px;
-        width: 16px;
-    }
+@media only screen and (min-width: 1600px) {
+  .mainContainer2 > img {
+    width: 700px;
+    height: 500px;
+  }
+  .collage {
+    font-size: 42px;
+  }
+  .heading {
+    font-size: 60px;
+  }
+  .date {
+    font-size: 30px;
+    width: 562px;
+  }
+  .note {
+    font-size: 22px;
+  }
+  .description {
+    font-size: 22px;
+    margin-right: 15px;
+  }
+  .more {
+    width: 170px;
+    height: 56px;
+    font-size: 20px;
+  }
+  .more > img {
+    height: 16px;
+    width: 16px;
+  }
 }
